--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,13 @@
 plugins {
     id 'java'
-    id 'io.franzbecker.gradle-lombok' version '4.0.0'
-    id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id 'io.freefair.lombok' version '5.3.0'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group 'software.bigbade'
-version '1.0'
+version '1.0.0'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-lombok {
-    version = '1.18.12'
-    sha256 = ''
-}
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_14
 
 repositories {
     mavenCentral()
@@ -21,9 +15,6 @@ repositories {
 }
 
 dependencies {
-    //Annotations
-    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
-
     //json.simple
     implementation 'com.github.cliftonlabs:json-simple:3.1.0'
     //JDA for Discord bots
